lsws/ppc/yuv2rgb: Fix transparency converting from yuv->rgb32.

Based on 68363b69 by Reimar Döffinger.

Fixes ticket #9077.